crates/gr-cli/src/snapshots/gr_cli__tests__capability_coverage.snap
---
source: crates/gr-cli/src/lib.rs
expression: "serde_yaml::to_string(&report).expect(\"yaml\")"
---
gaps: []
