crates/gr-cli/src/snapshots/gr_cli__tests__plan_session_macos_hardware_faithful.snap
---
source: crates/gr-cli/src/lib.rs
assertion_line: 3953
expression: output
---
outcome: plan
session_id: 1
profile_id: dualsense
requested_goal: hardware-faithful
requested_fidelity_tier: identity-aware
selected_level: hid
target_host_platform: macos
selected_backend_family: macos-hid
selected_provider_id: macos-hid
selected_translator_family: dual-sense
capability_result:
  enabled_capabilities:
  - rumble
  - haptics
  - lighting
  - player-indicators
  - trigger-effect
  - audio
degradation:
  degraded: true
  reasons:
  - kind: transport-not-realizable
    requested_backend_level: transport
    available_backend_levels:
    - hid
    available_backends:
    - macos-hid
    reason: 'no transport backend is available; inventory exposes only hid-tier backends; available backends: macos-hid'
deployment_requirements:
  requirements:
  - phase-12 macos-hid backend is planning-only; no device realization yet
  - 'deployment requirement: a notarized DriverKit system extension and the matching app entitlement must be approved before realization'
backend_open_context:
  session_id: 1
  profile_id: dualsense
  fidelity_tier: identity-aware
  backend_level: hid
  host_platform: macos
session_options:
  accepted_update_kinds:
  - frame
  unknown_field_policy: reject
  range_validation_policy: reject
  coerce_integer_like_values: false
  allow_missing_optional_fields: true
  require_monotonic_sequence: false
  reject_unsupported_provider_preference: true
  unsupported_capability_policy: report
  delivery_policy: !callback
    callback_namespace: virtualGamepad
  backpressure_policy: !drop-oldest
    log_dropped_outputs: true
    max_queue_depth: 8
