crates/gr-cli/src/snapshots/gr_cli__tests__plan_session_rejection.snap
---
source: crates/gr-cli/src/lib.rs
assertion_line: 1501
expression: output
---
outcome: rejection
profile_id: dualsense
requested_goal: hardware-faithful
requested_fidelity_tier: hardware-faithful
reasons:
- kind: no-backend-supports-profile
