crates/gr-cli/src/snapshots/gr_cli__tests__plan_session_windows_identity_aware.snap
---
source: crates/gr-cli/src/lib.rs
assertion_line: 3919
expression: output
---
outcome: plan
session_id: 1
profile_id: dualsense
requested_goal: identity-aware
requested_fidelity_tier: identity-aware
selected_level: hid
target_host_platform: windows
selected_backend_family: windows-hid
selected_provider_id: windows-hid
selected_translator_family: dual-sense
capability_result:
  enabled_capabilities:
  - rumble
  - haptics
  - lighting
  - player-indicators
  - trigger-effect
  - audio
degradation:
  degraded: false
deployment_requirements:
  requirements:
  - phase-12 windows-hid backend is planning-only; no device realization yet
  - 'deployment requirement: a signed virtual-HID bus driver must be installed before realization'
backend_open_context:
  session_id: 1
  profile_id: dualsense
  fidelity_tier: identity-aware
  backend_level: hid
  host_platform: windows
session_options:
  accepted_update_kinds:
  - frame
  unknown_field_policy: reject
  range_validation_policy: reject
  coerce_integer_like_values: false
  allow_missing_optional_fields: true
  require_monotonic_sequence: false
  reject_unsupported_provider_preference: true
  unsupported_capability_policy: report
  delivery_policy: !callback
    callback_namespace: virtualGamepad
  backpressure_policy: !drop-oldest
    log_dropped_outputs: true
    max_queue_depth: 8
